@@ -41,6 +41,15 @@ public class WordTokenizer implements Tokenizer {
   private static final List<String> PROTOCOLS = Collections.unmodifiableList(Arrays.asList("http", "https", "ftp"));
   private static final Pattern URL_CHARS = Pattern.compile("[a-zA-Z0-9/%$-_.+!*'(),\\?]+");
 
+  private static final String TOKENIZING_CHARACTERS = "\u0020\u00A0\u115f" +
+      "\u1160\u1680"
+      + "\u2000\u2001\u2002\u2003\u2004\u2005\u2006\u2007"
+      + "\u2008\u2009\u200A\u200B\u200c\u200d\u200e\u200f"
+      + "\u2028\u2029\u202a\u202b\u202c\u202d\u202e\u202f"
+      + "\u205F\u2060\u2061\u2062\u2063\u206A\u206b\u206c\u206d"
+      + "\u206E\u206F\u3000\u3164\ufeff\uffa0\ufff9\ufffa\ufffb"
+      + ",.;()[]{}=*#∗×·+÷<>!?:/|\\\"'«»„”“`´‘’‛′…¿¡\t\n\r";
+
   /**
    * Get the protocols that the tokenizer knows about.
    * @return currently {@code http}, {@code https}, and {@code ftp}
@@ -56,18 +65,24 @@ public class WordTokenizer implements Tokenizer {
   @Override
   public List<String> tokenize(final String text) {
     final List<String> l = new ArrayList<>();
-    final StringTokenizer st = new StringTokenizer(text,
-        "\u0020\u00A0\u115f\u1160\u1680"
-            + "\u2000\u2001\u2002\u2003\u2004\u2005\u2006\u2007"
-            + "\u2008\u2009\u200A\u200B\u200c\u200d\u200e\u200f"
-            + "\u2028\u2029\u202a\u202b\u202c\u202d\u202e\u202f"
-            + "\u205F\u2060\u2061\u2062\u2063\u206A\u206b\u206c\u206d"
-            + "\u206E\u206F\u3000\u3164\ufeff\uffa0\ufff9\ufffa\ufffb"
-            + ",.;()[]{}=*#∗×·+÷<>!?:/|\\\"'«»„”“`´‘’‛′…¿¡\t\n\r", true);
+    final StringTokenizer st = new StringTokenizer(text, TOKENIZING_CHARACTERS, true);
     while (st.hasMoreElements()) {
       l.add(st.nextToken());
     }
     return joinUrls(l);
+  }
+
+
+  /**
+   *
+   * @return The string containing the characters used by the   *
+   * tokenizer to tokenize words.
+   * 
+   * @since 2.5
+   * 
+   */
+  public String getTokenizingCharacters() {
+    return TOKENIZING_CHARACTERS;
   }
 
   // see rfc1738 and http://stackoverflow.com/questions/1856785/characters-allowed-in-a-url
