@@ -2,6 +2,9 @@ LanguageTool Change Log
 
 2.5-SNAPSHOT (release planned for 2014-03-31)
 
+-Dutch:
+    -remove a hack from the word tokenizer code
+
 -English:
     -added a new rule to handle corrections of mistakes in standard
      English contractions (wasnt, didnt)
@@ -13,6 +16,8 @@ LanguageTool Change Log
     -added several rules
     -added dozens of compounds: it now has 3400+ compound words
 
+-added common punctuation and mathematical characters (=#*∗×·+÷) to the 
+set of tokenizing characters in most languages
 
 2.4.1 (2014-01-08)
 
